fix page container spacing

--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -59,6 +59,11 @@ code {
   font-weight: bold;
 }
 
+
+.page-container > h1 {
+  margin-bottom: 20px; 
+}
+
 //
 // button
 // -----------------------------
@@ -195,11 +200,17 @@ label:hover:before {
   font-weight: bold;
 }
 
+.cr-page-header > h1 {
+  margin-bottom: 20px;
+}
+
 .page-container {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 30px;
+  padding-bottom: 40px; 
 }
 
 
